fix(*): fix liens secondaires, spacing in et

--- a/frontend/src/app/accueil/accueil.component.css
+++ b/frontend/src/app/accueil/accueil.component.css
@@ -89,7 +89,7 @@
 }
 
 /** Classes pour la lib dropdown */
-.dropdown {
+/*.dropdown {
   position: relative;
 }
 
@@ -130,4 +130,4 @@
   display: block;
   opacity: 1;
   margin-top: 0;
-}
+}*/
